[package]
name = "signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
